--- a/pages/more/daitails of mla/details of mla.html
+++ b/pages/more/daitails of mla/details of mla.html
@@ -10,53 +10,80 @@
 </head>
 
 <body>
+
+    <!-- background video -->
+
     <div class="headvideo">
         <video autoplay muted loop id="myVideo">
             <source src="../../../assets/images/Pattern - 85590.mp4" type="video/mp4">
         </video>
     </div>
+
+    <!-- total nav -->
+
     <div class="totalnav">
+
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
                 <source src="../../../assets/images/Pattern - 85590.mp4" type="video/mp4">
-                <track default/>
+                <track default />
             </video>
+        </div>
+
         <!-- navbar1 -->
+
         <div class="navbar">
+
             <div class="topic">
                 <h1>POLITIFACT</h1>
             </div>
+
             <div class="topic1">
                 <p><a style="text-decoration: none;" href="">contact</a></p>
                 <p>|</p>
                 <p><a style="text-decoration: none;" href="">feedback</a></p>
             </div>
+
         </div>
+
         <!-- navbar2 -->
+
         <div class="navbar1">
+
             <div class="input">
                 <input type="text" placeholder="search">
                 <img src="../../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
+
             <div class="nav">
+
                 <nav aria-label="nav-menu">
+
                     <ul>
+
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../../potfolio.html">Portfolio</a></li>
                         <div class="dropdown">
-                           <ul> <li><a class="dropbtn" href="#">manifesto</a></li></ul>
+
+                            <ul>
+                                <li><a class="dropbtn" href="#">manifesto</a></li>
+                            </ul>
+
                             <div class="dropdown-content">
                                 <a href="../../manifesto/bending.html">Bending</a>
                                 <a href="../../manifesto/complte.html">completed</a>
                             </div>
+
                         </div>
 
                         <li><a href="../../passt leaders/past leaders.html">past leaders</a></li>
 
                         <div class="dropdown">
+
                             <ul>
                                 <li><a class="dropbtn" href="">more</a></li>
                             </ul>
+
                             <div class="dropdown-content">
                                 <a href="../../more/Governer list.html">Governer list</a>
                                 <a href="../../more/mla.html">MLA list</a>
@@ -65,29 +92,47 @@
                         </div>
 
                     </ul>
+
                 </nav>
+
             </div>
+
         </div>
+
     </div>
 
+    <!-- ditails of thoguthi -->
+
     <div class="ditails">
+
         <h1>GUMMIDIPOONDI ASSEMBLY ELECTION RESULTS 2021</h1>
         <p>Gummidipoondi is an assembly constituency in Tamil Nadu. In 2021 Tamil Nadu Assembly elections, the total
             percentage of voters in Gummidipoondi Assembly Constituency was recorded at 77.93 percent.Gummidipoondi
             comes under Tiruvallur district of Tamil Nadu State. T J Govindarajan (DMK), Prakash (PMK), V.Saravanan
             (IJK),
-            Usha (NTK), K.M. Dilli (DMDK) are key candidates contested from Gummidipoondi constituency in the 2021 Tamil
+            Usha (NTK), K.M. Dilli (DMDK) are key candidates contested from Gummidipoondi constituency in the 2021
+            Tamil
             Nadu
-            Assembly elections along with many other independent candidates. In 2021, T J Govindarajan of the Dravida
+            Assembly elections along with many other independent candidates. In 2021, T J Govindarajan of the
+            Dravida
             Munnetra
-            Kazhagam won the seat by defeating Prakash of the Pattali Makkal Katchi with a margin of 50938 votes.</p>
+            Kazhagam won the seat by defeating Prakash of the Pattali Makkal Katchi with a margin of 50938 votes.
+        </p>
+
     </div>
+
     <!-- tear wise list for wining list  -->
+
     <div class="allcandidate">
+
         <div class="candidate">
+
             <h2>Gummidipoondi Assembly election results (2021)</h2>
+
             <table>
+
                 <tbody>
+
                     <tr>
                         <th>
                             Candidate's Name
@@ -108,6 +153,7 @@
                             Margin
                         </th>
                     </tr>
+
                     <tr>
                         <td>T J Govindarajan</td>
                         <td>DMK</td>
@@ -304,14 +350,22 @@
                         <td>
                         </td>
                     </tr>
+
                 </tbody>
+
             </table>
+
         </div>
+
         <div class="candidate">
+
             <h2>Gummidipoondi Assembly election results (2016)</h2>
             <table>
+
                 <tbody>
+
                     <tr>
+
                         <th>
                             Candidate's Name
                         </th>
@@ -572,13 +626,21 @@
                         <td>
                         </td>
                     </tr>
+
                 </tbody>
+
             </table>
+
         </div>
+
         <div class="candidate">
+
             <h2>Gummidipoondi Assembly election results (2011)</h2>
+
             <table>
+
                 <tbody>
+
                     <tr>
                         <th>
                             Candidate's Name
@@ -780,13 +842,20 @@
                         <td>
                         </td>
                     </tr>
+
                 </tbody>
+
             </table>
+
         </div>
+
         <div class="candidate">
+
             <h2>Gummidipoondi Assembly election results (2006)</h2>
             <table>
+
                 <tbody>
+
                     <tr>
                         <th>
                             Candidate's Name
@@ -1048,13 +1117,21 @@
                         <td>
                         </td>
                     </tr>
+
                 </tbody>
+
             </table>
+
         </div>
+
         <div class="candidate">
+
             <h2>Gummidipoondi Assembly election results (2001)</h2>
+
             <table>
+
                 <tbody>
+
                     <tr>
                         <th>
                             Candidate's Name
@@ -1211,13 +1288,21 @@
                         <td>
                         </td>
                     </tr>
+
                 </tbody>
+
             </table>
+
         </div>
+
     </div>
-     <!-- footer -->
-     <div class="footer">
+
+    <!-- footer -->
+
+    <div class="footer">
+
         <div class="foot">
+
             <h1>politic</h1>
             <p>
 
@@ -1228,9 +1313,11 @@
             <img src="../../../assets/images/icon-instagram.svg" alt="error image">
             <img src="../../../assets/images/icon-pinterest.svg" alt="error image">
             <img src="../../../assets/images/icon-twitter.svg" alt="error image">
-        
+
 
         </div>
+
+
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
             <p>About Us</p>
@@ -1238,6 +1325,7 @@
             <p>Our Approch</p>
             <p>Statistics</p>
         </div>
+
         <div class="foot1">
             <p>IMPORTANT INFO</p>
             <p>Donet</p>
@@ -1245,11 +1333,14 @@
             <p>Volunteer form</p>
             <p>bloger</p>
         </div>
+
         <div class="foot1">
             <h1>instagram </h1>
             <p>not available for this page</p>
         </div>
+
     </div>
+    
 </body>
 
 </html>
