--- a/pages/passt leaders/past leaders.html
+++ b/pages/passt leaders/past leaders.html
@@ -10,35 +10,56 @@
 </head>
 
 <body>
-    <div class="totalnav"> <div class="headvideo1">
-        <video autoplay muted loop id="myVideo">
-            <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
-            <track default/>
-        </video>
+
+    <!-- total nav bar -->
+
+    <div class="totalnav">
+
+        <div class="headvideo1">
+            <video autoplay muted loop id="myVideo">
+                <source src="../../assets/images/Pattern - 85590.mp4" type="video/mp4">
+                <track default />
+            </video>
+        </div>
+
         <!-- navbar1 -->
+
         <div class="navbar">
+
             <div class="topic">
                 <h1>poltifact</h1>
             </div>
+
             <div class="topic1">
                 <p>contact</p>
                 <p>|</p>
                 <p>feedback</p>
             </div>
+
         </div>
+
         <!-- navbar2 -->
+
         <div class="navbar1">
+
             <div class="input">
                 <input type="text" placeholder="search">
                 <img src="../../assets/images/3917132.svg" width="20px" height="20px" alt="">
             </div>
+
             <div class="nav">
+
                 <nav>
+
                     <ul>
+
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../pages/portfolio/potfolio.html">Portfolio</a></li>
+
                         <div class="dropdown">
-                            <ul><li><a class="dropbtn" href="">manifesto</a></li></ul>
+                            <ul>
+                                <li><a class="dropbtn" href="">manifesto</a></li>
+                            </ul>
                             <div class="dropdown-content">
                                 <a href="../manifesto/bending.html">Bending</a>
                                 <a href="../manifesto/complte.html">completed</a>
@@ -48,9 +69,9 @@
                         <li><a href="../passt leaders/past leaders.html">past leaders</a></li>
 
                         <div class="dropdown">
-                           <ul>
-                            <li><a class="dropbtn" href="">more</a></li>
-                           </ul>
+                            <ul>
+                                <li><a class="dropbtn" href="">more</a></li>
+                            </ul>
                             <div class="dropdown-content">
                                 <a href="../more/Governer list.html">Governer list</a>
                                 <a href="../more/mla.html">MLA list</a>
@@ -59,57 +80,88 @@
                         </div>
 
                     </ul>
+
                 </nav>
+
             </div>
+
         </div>
+
     </div>
+
+    <!-- piechart start -->
+
     <div class="piechart">
-        <img src="../../assets/images/Parties by total duration (in days) of holding Chief Minister's Office.svg" alt="">
+        <img src="../../assets/images/Parties by total duration (in days) of holding Chief Minister's Office.svg"
+            alt="error image">
     </div>
+
+    <!-- start date list tables -->
+
     <div class="datelist">
+
         <table>
+
             <thead>
+
                 <tr>
                     <th>S.no</th>
                     <th>Political pparty</th>
                     <th>Number of chief minister</th>
                     <th>Total days of holding CMO</th>
                 </tr>
+
             </thead>
+
             <tbody>
+
                 <tr>
                     <td>1</td>
                     <td>All India Anna Dravida Munnetra Kazhagam</td>
                     <td>5+1 acting</td>
                     <td>11004 days</td>
                 </tr>
+
                 <tr>
                     <td>2</td>
                     <td>Dravida Munnetra Kazhagam</td>
                     <td>3+1 acting</td>
                     <td>8219 days</td>
                 </tr>
+
                 <tr>
                     <td>3</td>
                     <td>Indian National Congress</td>
                     <td>4</td>
                     <td>6247 days</td>
                 </tr>
+
             </tbody>
+
         </table>
+
     </div>
+
+    <!-- past leader list start -->
+
     <div class="pastleaders">
+
         <table>
+
             <thead>
+
                 <tr>
                     <th>Sl.No</th>
                     <th>Chief Minister</th>
                     <th>From</th>
                     <th>To</th>
                     <th>Party Name</th>
+                </tr>
+
             </thead>
-            </tr>
+
             <tbody>
+
                 <tr>
                     <td>1</td>
                     <td><a href="../portfolio/profile/profile.html">M.K.Stalin</a></td>
@@ -117,6 +169,7 @@
                     <td>Present</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>2</td>
                     <td><a href="">Edappadi K. Palaniswami</a></td>
@@ -124,6 +177,7 @@
                     <td>03 May 2021</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>3</td>
                     <td><a href="">O. Panneerselvam</a></td>
@@ -131,6 +185,7 @@
                     <td>15 Feb 2017</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>4</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -138,6 +193,7 @@
                     <td>04 Dec 2016</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>5</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -145,6 +201,7 @@
                     <td>23 May 2016</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>6</td>
                     <td><a href="">O. Panneerselvam</a></td>
@@ -152,6 +209,7 @@
                     <td>22 May 2015</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>7</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -159,6 +217,7 @@
                     <td>27 Sep 2014</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>8</td>
                     <td><a href=""> M. Karunanidhi</a></td>
@@ -166,6 +225,7 @@
                     <td>15 May 2011</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>9</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -173,6 +233,7 @@
                     <td>12 May 2006</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>10</td>
                     <td><a href=""> O. Panneerselvam</a></td>
@@ -180,6 +241,7 @@
                     <td>01 Mar 2002</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>11</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -187,6 +249,7 @@
                     <td>21 Sep 2001</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>12</td>
                     <td><a href="">M. Karunanidhi</a></td>
@@ -194,6 +257,7 @@
                     <td>13 May 2001</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>13</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -201,6 +265,7 @@
                     <td>13 May 1996</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>14</td>
                     <td><a href="">President's rule</a></td>
@@ -208,6 +273,7 @@
                     <td>24 Jun 1991</td>
                     <td></td>
                 </tr>
+
                 <tr>
                     <td>15</td>
                     <td><a href="">M. Karunanidhi</a></td>
@@ -215,6 +281,7 @@
                     <td>30 Jan 1991</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>4</td>
                     <td><a href="">J. Jayalalithaa</a></td>
@@ -222,6 +289,7 @@
                     <td>04 Dec 2016</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>16</td>
                     <td><a href="">President's rule</a></td>
@@ -229,6 +297,7 @@
                     <td>27 Jan 1989</td>
                     <td></td>
                 </tr>
+
                 <tr>
                     <td>17</td>
                     <td><a href="">Janaki Ramachandran</a></td>
@@ -236,6 +305,7 @@
                     <td>30 Jan 1988</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>18</td>
                     <td><a href="">V.R. Nedunchezhiyan</a></td>
@@ -243,6 +313,7 @@
                     <td>07 Jan 1988</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>19</td>
                     <td><a href="">M. G. Ramachandran</a></td>
@@ -250,6 +321,7 @@
                     <td>24 Dec 1987</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>20</td>
                     <td><a href=""> M. G. Ramachandran</a></td>
@@ -257,6 +329,7 @@
                     <td>15 Nov 1984</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>21</td>
                     <td><a href=""> President's rule</a></td>
@@ -264,6 +337,7 @@
                     <td>09 Jun 1980</td>
                     <td></td>
                 </tr>
+
                 <tr>
                     <td>22</td>
                     <td><a href="">M. G. Ramachandran</a></td>
@@ -271,6 +345,7 @@
                     <td>17 Feb 1980</td>
                     <td>AIADMK</td>
                 </tr>
+
                 <tr>
                     <td>23</td>
                     <td><a href="">President's rule</a></td>
@@ -278,6 +353,7 @@
                     <td>30 Jun 1977</td>
                     <td></td>
                 </tr>
+
                 <tr>
                     <td>24</td>
                     <td><a href=""> M. Karunanidhi</a></td>
@@ -285,6 +361,7 @@
                     <td>31 Jan 1976</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>25</td>
                     <td><a href="">M. Karunanidhi</a></td>
@@ -292,6 +369,7 @@
                     <td>04 Jan 1971</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>26</td>
                     <td><a href=""> V.R. Nedunchezhiyan</a></td>
@@ -299,6 +377,7 @@
                     <td>10 Feb 1969</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>27</td>
                     <td><a href="">C. N. Annadurai</a></td>
@@ -306,6 +385,7 @@
                     <td>03 Feb 1969</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>28</td>
                     <td><a href="">C. N. Annadurai</a></td>
@@ -313,6 +393,7 @@
                     <td>03 Feb 1969</td>
                     <td>DMK</td>
                 </tr>
+
                 <tr>
                     <td>29</td>
                     <td><a href=""> M. Bakthavatsalam</a></td>
@@ -320,6 +401,7 @@
                     <td>06 Mar 1967</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>30</td>
                     <td><a href="">K. Kamaraj</a></td>
@@ -327,6 +409,7 @@
                     <td>02 Oct 1963</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>31</td>
                     <td><a href="">K. Kamaraj</a></td>
@@ -334,6 +417,7 @@
                     <td>01 Mar 1962</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>32</td>
                     <td><a href="">K. Kamaraj</a></td>
@@ -341,6 +425,7 @@
                     <td>31 Mar 1957</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>33</td>
                     <td><a href="">C. Rajagopalachari</a></td>
@@ -348,6 +433,7 @@
                     <td>13 Apr 1954</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>34</td>
                     <td><a href="">P. S. Kumaraswamy Raja</a></td>
@@ -355,6 +441,7 @@
                     <td>10 Apr 1952</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>35</td>
                     <td><a href="">P. S. Kumaraswamy Raja</a></td>
@@ -362,6 +449,7 @@
                     <td>26 Jan 1950</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>36</td>
                     <td><a href="">O. P. Ramaswamy Reddiyar</a></td>
@@ -369,6 +457,7 @@
                     <td>06 Apr 1949</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>37</td>
                     <td><a href="">Tanguturi Prakasam</a></td>
@@ -376,6 +465,7 @@
                     <td>23 Mar 1947</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>38</td>
                     <td><a href="">Governor's Rule</a></td>
@@ -383,6 +473,7 @@
                     <td>30 Apr 1946</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>39</td>
                     <td><a href="">C. Rajagopalachari</a></td>
@@ -390,6 +481,7 @@
                     <td>29 Oct 19394</td>
                     <td>INC</td>
                 </tr>
+
                 <tr>
                     <td>40</td>
                     <td><a href=""> Kurma Venkata Reddy Naidu</a></td>
@@ -398,6 +490,7 @@
                     <td>Interim provisional ministry</td>
                 </tr>
 
+
                 <tr>
                     <td>41</td>
                     <td><a href="">Raja of Bobbili</a></td>
@@ -405,6 +498,7 @@
                     <td>01 Apr 1937</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>42</td>
                     <td><a href="">P. T. Rajan</a></td>
@@ -412,6 +506,7 @@
                     <td>24 Aug 1936</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>43</td>
                     <td><a href="">Raja of Bobbili</a></td>
@@ -419,6 +514,7 @@
                     <td>04 Apr 1936</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>44</td>
                     <td><a href="">Raja of Bobbili</a></td>
@@ -426,6 +522,7 @@
                     <td>05 Nov 1934</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>45</td>
                     <td><a href=""> B. Munuswamy Naidu</a></td>
@@ -433,6 +530,7 @@
                     <td>05 Nov 1932</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>46</td>
                     <td><a href=""> P. Subbarayan</a></td>
@@ -440,6 +538,7 @@
                     <td>04 Dec 1926</td>
                     <td>Unaffiliated</td>
                 </tr>
+
                 <tr>
                     <td>47</td>
                     <td><a href="">Raja of Panagal</a></td>
@@ -447,6 +546,7 @@
                     <td>04 Dec 1926</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>48</td>
                     <td><a href="">Raja of Panagal</a></td>
@@ -454,6 +554,7 @@
                     <td>11 Sep 1923</td>
                     <td>Justice Party</td>
                 </tr>
+
                 <tr>
                     <td>49</td>
                     <td><a href="">A. Subbarayalu Reddiar</a></td>
@@ -461,11 +562,17 @@
                     <td>11 Jul 1921</td>
                     <td>Justice Party</td>
                 </tr>
+
             </tbody>
+
         </table>
+
     </div>
+
     <!-- footer -->
+
     <div class="footer">
+
         <div class="foot">
             <h1>politic</h1>
             <p>
@@ -477,9 +584,8 @@
             <img src="../../assets/images/icon-instagram.svg" alt="">
             <img src="../../assets/images/icon-pinterest.svg" alt="">
             <img src="../../assets/images/icon-twitter.svg" alt="">
-            <!-- <p>&copy;2022</p> -->
-
         </div>
+
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
             <p>About Us</p>
@@ -487,6 +593,7 @@
             <p>Our Approch</p>
             <p>Statistics</p>
         </div>
+
         <div class="foot1">
             <p>IMPORTANT INFO</p>
             <p>Donet</p>
@@ -494,11 +601,14 @@
             <p>Volunteer form</p>
             <p>bloger</p>
         </div>
+
         <div class="foot1">
             <h1>instagram </h1>
             <p>not available for this page</p>
         </div>
+
     </div>
+    
 </body>
 
 </html>
