--- a/pages/portfolio/profile/profile.html
+++ b/pages/portfolio/profile/profile.html
@@ -10,36 +10,56 @@
 </head>
 
 <body>
+
+    <!-- total nav bar -->
+
     <div class="totalnav">
+
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
                 <source src="../../../assets/images/Pattern - 85590.mp4" type="video/mp4">
-                <track default/>
+                <track default />
             </video>
+        </div>
+
         <!-- navbar1 -->
+
         <div class="navbar">
+
             <div class="topic">
                 <h1>POLITIFACT</h1>
             </div>
+
             <div class="topic1">
                 <p><a style="text-decoration: none;" href="">contact</a></p>
                 <p>|</p>
                 <p><a style="text-decoration: none;" href="">feedback</a></p>
             </div>
+
         </div>
+
         <!-- navbar2 -->
+        
         <div class="navbar1">
+
             <div class="input">
                 <input type="text" placeholder="search">
                 <img src="../../../assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
+
             <div class="nav">
+
                 <nav aria-label="nav-menu">
+
                     <ul>
+
                         <li><a href="../../../index.html">Home</a></li>
                         <li><a href="../potfolio.html">Portfolio</a></li>
+
                         <div class="dropdown">
-                           <ul> <li><a class="dropbtn" href="#">manifesto</a></li></ul>
+                            <ul>
+                                <li><a class="dropbtn" href="#">manifesto</a></li>
+                            </ul>
                             <div class="dropdown-content">
                                 <a href="../../manifesto/bending.html">Bending</a>
                                 <a href="../../manifesto/complte.html">completed</a>
@@ -60,29 +80,39 @@
                         </div>
 
                     </ul>
+
                 </nav>
+
             </div>
+
         </div>
+
     </div>
 
     <!-- profile page start -->
     <div class="all">
+
         <div class="cm">
+
             <div class="cmimage">
                 <h1>chief minister</h1>
                 <img src="../../../assets/images/mk stalin.png" width="280px" height="300px" alt="error image">
             </div>
+
             <div class="cmcontent">
+
                 <h2>Biography</h2>
                 <p>Muthuvel Karunanidhi Stalin knowns as M.K. Stalin was born on 1st March 1953 as the third son to the
                     prominent
                     Dravidian leader and five-time chief minister of Tamilnadu,
                     Kalaignar M. Karunanidhi and his second wife Dhayalu ammal in Chennai, Tamilnadu.
                 </p>
+
                 <h2>M K Stalin</h2>
                 <p>Muthuvel Karunanidhi Stalin is widely known as M K Stalin, who is the 8th and current
                     Chief Minister of Tamil Nadu. Moreover, Stalin has been serving as the President of
                     Dravida Munnetra Kazhagam (DMK) political party.</p>
+
                 <h2>Politics</h2>
                 <p>His political career began in his early teens when he started the DMK Gopalapuram Youth Wing
                     with several friends. <sup>[16]</sup> As a 14 year old, he campaigned for his uncle, Murasoli
@@ -98,15 +128,20 @@
                     DMK youth wing. In 1982 Stalin became the youth wing secretary of DMK, a post he held for more than
                     four decades.
                 </p>
+
             </div>
+
         </div>
+
         <div class="cmcontent1">
+
             <h2>Education Qualification of M K Stalin.</h2>
             <p>M K Stalin completed schooling from Madras Christian College Higher Secondary School. Then he took a
                 pre-university
                 course at Vivekananda College. And then, Stalin earned B.A. degree in history from Presidency College,
                 Chennai of University
                 of Madras in 1973.</p>
+
             <h2>Youth Wing</h2>
             <p>In 1968, Stalin started the DMK Youth Wing in Gopalapuram in a barber shop with his friends. In 1983, he
                 transformed the
@@ -115,12 +150,14 @@
                 decades. During the early stages of the Youth Wing, he travelled across Tamil Nadu with other members to
                 mentor fellow youth of the
                 state in key areas of active politics at the grassroots level.</p>
+
             <h2>Mayor of Chennai</h2>
             <p>Stalin became the city's first directly elected mayor in 1996. He coined a pet project called Singara
                 Chennai (Beautiful Chennai),
                 lauded for improving Chennai's infrastructure.His efforts in improving city infrastructure earned him
                 the title of Managara Thanthai
                 (father of the city).</p>
+
             <h2>Minister</h2>
             <p>In the 2006 Assembly Elections, the DMK regained control of the state assembly, partly due to Stalin's
                 efforts. Stalin
@@ -132,10 +169,12 @@
                 various comprehensive drinking
                 water projects such as Hogenakkal and Ramanathapuram water schemes.In 2008, he became treasurer of DMK.
             </p>
+
             <h2>Deputy Chief Minister of Tamil Nadu</h2>
             <p>On 29 May 2009, Stalin was nominated as Deputy Chief Minister of Tamil Nadu by Governor <span>Surjit
                     Singh Barnala</span>.He was first
                 dy. Chief Minister of Tamil Nadu.</p>
+
             <h2>Tamil Nadu <sup>,</sup> s First Agriculture budget</h2>
             <p>Stalin released Tamil Nadu <sup>'</sup> s first ever agricultural budget on 14 August 2021, which was
                 dedicated to farmers protesting
@@ -149,6 +188,7 @@
                 Thittam <sup>'</sup>, has been
                 introduced to convert wasteland into cultivable land.
             </p>
+
             <h2>Illam Thedi Kalvi</h2>
             <p>Stalin launched the <sup>'</sup> Illam Thedi Kalvi <sup>'</sup> scheme on 19 October 2021, notably India
                 <sup>'</sup>s largest
@@ -160,6 +200,7 @@
                 Kalvi <sup>'</sup> sessions
                 and that the recovery has been a lot more progressive among the disadvantaged group.[
             </p>
+
             <h2>Pudhumai Penn</h2>
             <p>Stalin launched the Moovalur Ramamirtham Ammaiyar Higher Education Assurance scheme titled 'Pudhumai
                 Penn' at a function
@@ -181,6 +222,7 @@
                 classrooms in these Schools of Excellence
                 would be modernised and art, literature, music, dance, sports among others would be promoted among
                 students.</p>
+
             <h2>M K Stalin recently launches Green TN Mission.</h2>
             <p>Chief Minister of Tamil Nadu, M K Stalin on Saturday encouraged citizens to extend their hands in
                 spreading forest cover and
@@ -189,6 +231,7 @@
                 Vandalur.
                 Stalin also said that the scheme is mainly focused on enhancing Tamil Nadu's tree and forest
                 cover to 33 per cent from 23.69 per cent in the forthcoming decade.</p>
+
             <h2>MK Stalin initiates to provide free breakfast scheme for govt students</h2>
             <p>Chief Minister of Tamil Nadu, M K Stalin has recently launched free breakfast scheme in Madurai for the
                 government students from class one to five.
@@ -197,6 +240,7 @@
                 However, the scheme will be implemented in 1,545 schools that includes 417 in cities, 163 in towns and
                 district centers, 728 in rural areas, and 237 in remote and hilly areas.
             </p>
+
             <h2>Achievements</h2>
             <p>Stalin has increased the plus-two passing percentage from 55 to 72 and changed the general notion about
                 the standard of Corporation schools in Chennai
@@ -204,10 +248,16 @@
                 and Forty-nine small bridges at a
                 cost of Rs. 4.92 crores to reduce road traffic congestion in the city.
                 He has successfully handled the Hogenekkal Water plan with the financial help of Japan.</p>
+
         </div>
+
+        <!-- assets table-->
+
         <div class="assets">
+
             <h2>MK Stalin<sup>'</sup>s Net Worth</h2>
             <table>
+
                 <tr>
                     <td>Annual</td>
                     <td>₹24.60 Lakh</td>
@@ -224,23 +274,31 @@
                     <td>Daily</td>
                     <td>Rs. 6k</td>
                 </tr>
+
             </table>
+
         </div>
 
         <div class="assets1">
             <h1>Net Worth ₹8.89 CRORE</h1>
+
             <div class="assetscm">
                 <h1>ASSETS ₹8.89 CRORE</h1>
                 <h1>Liabilities ₹ N/A</h1>
             </div>
+
         </div>
+
         <div class="survey">
             <img src="../../../assets/images/personal  survey.svg" alt="error image">
         </div>
+
         <div class="electiontable">
+
             <h2>Election of M K stalin</h2>
             <table>
                 <thead>
+
                     <tr>
                         <th>Elections</th>
                         <th>Constituency</th>
@@ -248,8 +306,11 @@
                         <th>Votes %</th>
                         <th>Majority %</th>
                     </tr>
+
                 </thead>
+
                 <tbody>
+
                     <tr>
                         <td>2021 Tamil Nadu Assembly election</td>
                         <td>Kolathur</td>
@@ -257,6 +318,7 @@
                         <td>60.86</td>
                         <td>40.59</td>
                     </tr>
+
                     <tr>
                         <td>2016 Tamil Nadu Assembly election</td>
                         <td>Kolathur</td>
@@ -264,6 +326,7 @@
                         <td>54.3</td>
                         <td>22.43</td>
                     </tr>
+
                     <tr>
                         <td>2011 Tamil Nadu Assembly election</td>
                         <td>Kolathur</td>
@@ -271,6 +334,7 @@
                         <td>47.7</td>
                         <td>1.92</td>
                     </tr>
+
                     <tr>
                         <td>2006 Tamil Nadu Assembly election</td>
                         <td>Thousand Lights</td>
@@ -278,6 +342,7 @@
                         <td>46.0</td>
                         <td>2.28</td>
                     </tr>
+
                     <tr>
                         <td>2001 Tamil Nadu Assembly election</td>
                         <td>Thousand Light</td>
@@ -285,6 +350,7 @@
                         <td>51.46</td>
                         <td>7.62</td>
                     </tr>
+
                     <tr>
                         <td>1996 Tamil Nadu Assembly election</td>
                         <td>Thousand Light</td>
@@ -292,6 +358,7 @@
                         <td>69.72</td>
                         <td>46.76</td>
                     </tr>
+
                     <tr>
                         <td>1991 Tamil Nadu Assembly election</td>
                         <td>Thousand Light</td>
@@ -299,6 +366,7 @@
                         <td>39.19</td>
                         <td>-17.31</td>
                     </tr>
+
                     <tr>
                         <td>1989 Tamil Nadu Assembly election</td>
                         <td>Thousand Light</td>
@@ -306,6 +374,7 @@
                         <td>50.59</td>
                         <td>20.54</td>
                     </tr>
+
                     <tr>
                         <td>1984 Tamil Nadu Assembly election</td>
                         <td>Thousand Light</td>
@@ -313,18 +382,26 @@
                         <td>47.94</td>
                         <td>-2.50</td>
                     </tr>
+
                 </tbody>
+
             </table>
         </div>
+
         <div class="opinionbox">
             <h2>your opinion for</h2>
             <input type="text" placeholder="comment"> <br>
             <input type="submit" value="submit">
         </div>
+
     </div>
+
     <!-- footer -->
+
     <div class="footer">
+
         <div class="foot">
+
             <h1>politic</h1>
             <p>
 
@@ -335,9 +412,9 @@
             <img src="../../../assets/images/icon-instagram.svg" alt="error image">
             <img src="../../../assets/images/icon-pinterest.svg" alt="error image">
             <img src="../../../assets/images/icon-twitter.svg" alt="error image">
-            
 
         </div>
+
         <div class="foot1">
             <h1>IMPORTANT INFO</h1>
             <p>About Us</p>
@@ -345,6 +422,7 @@
             <p>Our Approch</p>
             <p>Statistics</p>
         </div>
+
         <div class="foot1">
             <p>IMPORTANT INFO</p>
             <p>Donet</p>
@@ -352,11 +430,14 @@
             <p>Volunteer form</p>
             <p>bloger</p>
         </div>
+
         <div class="foot1">
             <h1>instagram </h1>
             <p>not available for this page</p>
         </div>
+
     </div>
+
 </body>
 
 </html>
