--- a/index.html
+++ b/index.html
@@ -7,43 +7,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>politifact</title>
     <link href="assets/css/main.css" rel="stylesheet">
-</head>
+
 
 <body>
+
     <!-- background vidieo -->
+
     <div class="headvideo">
+
         <video autoplay muted loop id="myVideo">
             <source src="assets/images/Flag - 117755.mp4" type="video/mp4">
             <track default>
         </video>
     </div>
+
     <!-- navbar all -->
 
     <div class="totalnav">
+
         <div class="headvideo1">
             <video autoplay muted loop id="myVideo">
                 <source src="assets/images/Pattern - 85590.mp4" type="video/mp4">
                 <track default />
             </video>
         </div>
+
         <!-- navbar -->
+
         <div class="navbar">
+
             <div class="topic">
                 <h1>POLITIFACT</h1>
             </div>
+
             <div class="topic1">
                 <p><a style="text-decoration: none;" href="pages/your opinion/join now.html">contact</a></p>
                 <p>|</p>
                 <p><a style="text-decoration: none;" href="pages/your opinion/your opnion.html">feedback</a></p>
             </div>
+
         </div>
 
         <!-- navbar1 -->
+
         <div class="navbar1">
 
             <div class="input">
                 <input type="text" placeholder="search">
-                <img src="assets/images/3917132.svg" width="20px" height="20px" alt="">
+                <img src="assets/images/3917132.svg" width="20px" height="20px" alt="error image">
             </div>
 
             <div class="nav">
@@ -59,6 +70,8 @@
                                 <li><a class="dropbtn" href="#">manifesto</a></li>
                             </ul>
                             <div class="dropdown-content">
+                                <!-- drop dpwn menu -->
+
                                 <a href="pages/manifesto/bending.html">Bending</a>
                                 <a href="pages/manifesto/complte.html">completed</a>
                             </div>
@@ -71,6 +84,8 @@
                                 <li><a class="dropbtn" href="">more</a></li>
                             </ul>
                             <div class="dropdown-content">
+                                <!-- drop down menu -->
+
                                 <a href="pages/more/Governer list.html">Governer list</a>
                                 <a href="pages/more/mla.html">MLA list</a>
                             </div>
@@ -84,21 +99,26 @@
     </div>
 
     <!-- section1 -->
+
     <div class="section1">
+
         <h1>
             you must be the<br> change you wish to see in the world
         </h1>
 
         <p>
             Real change from the status quo will never come from
-            electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding that
+            electing a politician -especilly not one who leads a that<br> status party dedicated to uppholiding
+            that
             status quo.
         </p>
 
         <button><a href="pages/your opinion/your opnion.html">your opnion</a></button>
 
     </div>
+
     <!-- section2 -->
+
     <div class="section2">
 
         <h1>welcome to politifact</h1>
@@ -108,6 +128,7 @@
         <div class="box">
 
             <div class="content1">
+
                 <h2>poltifact</h2>
                 <p>WE have to shed mutual bickering, shed the difference
                     of being high or low and develop the sence of equality
@@ -115,11 +136,15 @@
                     of swaraj prevalen prior to British rule . We have to like the children
                     of the same fahter.
                 </p>
+
             </div>
+
             <div class="sideimage">
                 <img src="assets/images/backround.jpg" width="500px" height="305px" alt="error image">
             </div>
+
         </div>
+
     </div>
     <!-- section3 -->
     <div class="section3">
@@ -173,6 +198,7 @@
 
 
     <!-- section5 -->
+
     <div class="section5">
 
         <h2 class="head">latest politics news</h2>
@@ -200,10 +226,13 @@
 
         </div>
     </div>
+
+
     <!-- footer  section-->
     <div class="footer">
 
         <div class="foot">
+            
             <h1>politic</h1>
             <p>
 
@@ -237,7 +266,9 @@
             <h1>instagram </h1>
             <p>not available for this page</p>
         </div>
+
     </div>
+
 </body>
 
 </html>
